[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rakam-systems"
version = "0.1.1"
authors = [
  { name = "Mohammed Jassem", email = "mohammedjassemhlel@gmail.com" },
]
description = "Rakam AI company open source libraries for help in AI systems development"
readme = "README.md"
requires-python = ">=3.8.1,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]

